Add action-icon css

--- a/src/cartItem.css
+++ b/src/cartItem.css
@@ -1,4 +1,8 @@
-.div{
-    display: inline-block;
-    display: inline;
+.action-icon{
+    height: 25px;
+    width: 25px;
+    margin-right: 10px;
+}
+.action-icon:hover{
+    cursor: pointer;
 }
