--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.action-icon{
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+}
+.action-icon:hover{
+  cursor: pointer;
+}
+.cart-item-action{
+  margin-top: 20px;
+}
