--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,52 @@ code {
   display: flex;
   flex-direction: column;
 }
+
+.Nav{background: rgb(2,0,36);
+  background: linear-gradient(20deg, rgba(2,0,36,1) 38%, rgba(118,120,133,1) 100%);
+  width: 100%;
+  height: 80px;
+  display: flex;
+}
+.Nav .rightside{
+  flex: 50%;
+  justify-content: left;
+  align-items: center;
+  display: flex;
+}
+
+.Nav .rightside .links{
+  max-height: 80px;
+  
+}
+
+.Nav .rightside .links a {  
+  color: white;
+  text-decoration: none;
+  margin: 15px;
+}
+
+.Nav  .leftside{
+  flex: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  
+}
+
+.Nav  .leftside img{
+  height: 50px;
+  margin-right: 25px;
+  justify-content: right;
+}
+
+.Nav  .leftside span{
+  background: seashell;
+  border-radius: 75%;
+  padding: 0px 5px;
+  position: absolute;
+  right: 19px;
+  top: 13px;
+}
+
+
